--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"magento2-rest-client": "github:troublediehard/magento2-rest-client",
 		"prop-types": "^15.5.10",
 		"react": "16.4.1",
 		"react-native": "0.56.0",
